--- a/SQL/testsql.csproj
+++ b/SQL/testsql.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Globalname.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Podg.cs">
       <SubType>Form</SubType>
     </Compile>
